fix(theme): improve article list on mobile

--- a/packages/theme/src/client/modules/blog/styles/article-item.scss
+++ b/packages/theme/src/client/modules/blog/styles/article-item.scss
@@ -14,7 +14,6 @@
 
   @media (max-width: hope-config.$pad) {
     margin: 0 auto 1rem;
-    padding: 0.75rem 1rem;
   }
 
   @media (max-width: hope-config.$mobile) {
